--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@
                             <tr>
                                 <th>Rank</th>
                                 <th>Player</th>
+                                <th class="desktop-only">Kills</th>
                                 <th class="desktop-only">Matches</th>
                                 <th class="desktop-only">Wins</th>
+                                <th class="desktop-only">Lost</th>
+                                <th class="desktop-only">Win Rate</th>
                                 <th>Points</th>
                             </tr>
                         </thead>
@@ -61,6 +64,11 @@
             <p>Last updated: <span id="last-updated">Never</span></p>
         </footer>
     </div>
+
+    <!-- Go to Top Button -->
+    <button id="goTopBtn" class="go-top-btn" title="Go to top">
+        <i class="fas fa-chevron-up"></i>
+    </button>
 
     <script src="script.js"></script>
 </body>
